--- a/storage/frontend/config.json
+++ b/storage/frontend/config.json
@@ -1,34 +1,48 @@
 {
-    "id" : "frontend",
-    "title": "Frontend",
-    "theme": "dark",
-    "seed": {
-        "from": 20,
-        "to": 50
+  "id": "frontend",
+  "label": "Frontend",
+  "theme": "dark",
+  "seed": {
+    "from": 20,
+    "to": 100
+  },
+  "dot": {
+    "offset_x": 100,
+    "offset_y": 100
+  },
+  "quadrants": [
+    {
+      "label": "Tools"
     },
-    "colors": {
-        "background": "#fff",
-        "grid": "#e60023",
-        "inactive": "#ddd"
+    {
+      "label": "Techniques"
     },
-    "quadrants": [
-        {"name": "Tools"},
-        {"name": "Techniques"},
-        {"name": "Modules"},
-        {"name": "Frameworks"}
-    ],
-    "rings": [
-        {"name": "ADOPT", "color": "#93c47d"},
-        {"name": "TRIAL", "color": "#93d2c2"},
-        {"name": "ASSESS", "color": "#fbdb84"},
-        {"name": "HOLD", "color": "#efafa9"}
-    ],
-    "dot": {
-        "offset": {
-            "x": 100,
-            "y": 100
-        }
+    {
+      "label": "Modules"
     },
-    "svg_id": "radar",
-    "print_layout": true
+    {
+      "label": "Frameworks"
+    }
+  ],
+  "rings": [
+    {
+      "label": "ADOPT"
+    },
+    {
+      "label": "TRIAL"
+    },
+    {
+      "label": "ASSESS"
+    },
+    {
+      "label": "HOLD"
+    }
+  ],
+  "foldername": "frontend",
+  "atime": "at1571479405970",
+  "mtime": "mt1571479405280",
+  "ctime": "ct1571479405280",
+  "versions": [
+    "2019.10"
+  ]
 }
