--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --experimental-modules  index.js",
-    "dev": "export NODE_ENV=default && node --experimental-modules --experimental-json-modules index.js"
+    "start": "cross-env NODE_ENV=production NODE_PORT=8300 node --experimental-modules --experimental-json-modules index.js",
+    "dev": "cross-env NODE_ENV=default node --experimental-modules --experimental-json-modules index.js",
+    "prod": "cross-env NODE_ENV=production node --experimental-modules --experimental-json-modules index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cross-env": "^6.0.3",
     "dateformat": "^3.0.3",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
     "fs-extra": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
+    "neo-tech-radar": "github:Neofonie/tech-radar",
     "ramda": "^0.26.1",
     "slugify": "^1.3.5"
   }
