--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production NODE_PORT=8300 node --experimental-modules --experimental-json-modules index.js",
     "dev": "cross-env NODE_ENV=default node --experimental-modules --experimental-json-modules index.js",
-    "prod": "cross-env NODE_ENV=production node --experimental-modules --experimental-json-modules index.js"
+    "prod": "cross-env NODE_ENV=production node --experimental-modules --experimental-json-modules index.js",
+    "postinstall": "cd node_modules/neo-tech-radar && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
