--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,14 @@
 version: '3'
 services:
-  tech-radar-server:
+  tech-radar:
+    container_name: server
+    image: tech-radar-server
     build: .
     command: npm start
     volumes:
-      - .:/usr/app/
-      - /usr/app/node_modules
+      - ./storage:/usr/app/storage
     ports:
       - "8300:8300"
+    environment:
+      - NODE_USER=admin
+      - NODE_PASS=change!moi
