--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "archiver": "^3.1.1",
     "body-parser": "^1.19.0",
     "cross-env": "^6.0.3",
     "dateformat": "^3.0.3",
